2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-10-10	Joel Sherrill <joel@OARcorp.com>

	* libc/printk.c (printNum): Properly handle a maxwidth of 0 
	as reported by Nick Hennenfent <NICK.HENNENFENT@ROCHE.COM>.

2001-09-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/zilog/Makefile.am: Use 'PREINSTALL_FILES ='.
	* include/motorola/Makefile.am: Use 'PREINSTALL_FILES ='.
	* include/sys/Makefile.am: Use 'PREINSTALL_FILES ='.
	* include/rtems/Makefile.am: Use 'PREINSTALL_FILES ='.
	* include/Makefile.am: Use 'PREINSTALL_FILES ='.

2001-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/sys/Makefile.am: Use = instead of += to setup
	NETWORKING_H_FILES and NEWLIB_H_FILES.

2001-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/Makefile.am: Revamp INCLUDES handling to make automake-1.5
	happy.

2001-09-14	Eric Norum <eric.norum@usask.ca>

	* libc/gxx_wrappers.c: Modifications to make gcc 3.x happy.

2001-08-17	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/libio_.h: Added ifdef to ensure that LOGIN_NAME_MAX
	is defined on GNU/Linux (RedHat 6.2 distribution).
	* libc/unixlibc.c: Added stubs for rtems_io_register_name() and
	rtems_io_lookup_name() so UNIX port would compile the IO manager
	sptest that registers /dev/null.

2001-08-10  Radzislaw Galler  <rgaller@et.put.poznan.pl>

	* score/cpu_asm.c (sh_set_irq_priority): Changed interrupt vector
	number range check and handling of interrupt priority regs to
	conform SH2 specs.
	* sci/sci_termios.c: New file.
	* include/sci_termios.h: New file.
	* include/Makefile.am (EXTRA_DIST): Added sci_termios.h.
	(include_sh_HEADERS): Added sci_termios.h.
	* score/ispsh7045.c (isp): Calling an ISR with immediate argument
	casued negative sign extension for vector numbers of 128 and
	above. This was fixed.